crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ca-pauses-prosody.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Speaker",
            "speaker_code": "SPK"
          },
          {
            "name": null,
            "role": "Adult",
            "speaker_code": "LSN"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Pauses: short (.), long (..), very long (...), timed (0.5);",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "prosodic markers; trailing off (+...), interruption (+/.)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: short_pause, long_pause, very_long_pause, timed_pause,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "trailing_off, interruption",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "well",
              "content": [
                {
                  "content": "well",
                  "type": "text"
                }
              ],
              "raw_text": "well",
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "think",
              "content": [
                {
                  "content": "think",
                  "type": "text"
                }
              ],
              "raw_text": "think",
              "type": "word"
            },
            {
              "cleaned_text": "so",
              "content": [
                {
                  "content": "so",
                  "type": "text"
                }
              ],
              "raw_text": "so",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "and",
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "type": "word"
            },
            {
              "cleaned_text": "then",
              "content": [
                {
                  "content": "then",
                  "type": "text"
                }
              ],
              "raw_text": "then",
              "type": "word"
            },
            {
              "duration": {
                "type": "medium"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "she",
              "content": [
                {
                  "content": "she",
                  "type": "text"
                }
              ],
              "raw_text": "she",
              "type": "word"
            },
            {
              "cleaned_text": "left",
              "content": [
                {
                  "content": "left",
                  "type": "text"
                }
              ],
              "raw_text": "left",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "he",
              "content": [
                {
                  "content": "he",
                  "type": "text"
                }
              ],
              "raw_text": "he",
              "type": "word"
            },
            {
              "cleaned_text": "said",
              "content": [
                {
                  "content": "said",
                  "type": "text"
                }
              ],
              "raw_text": "said",
              "type": "word"
            },
            {
              "duration": {
                "type": "long"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "nothing",
              "content": [
                {
                  "content": "nothing",
                  "type": "text"
                }
              ],
              "raw_text": "nothing",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "was",
              "content": [
                {
                  "content": "was",
                  "type": "text"
                }
              ],
              "raw_text": "was",
              "type": "word"
            },
            {
              "duration": {
                "seconds": "0.5",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "wondering",
              "content": [
                {
                  "content": "wondering",
                  "type": "text"
                }
              ],
              "raw_text": "wondering",
              "type": "word"
            },
            {
              "cleaned_text": "about",
              "content": [
                {
                  "content": "about",
                  "type": "text"
                }
              ],
              "raw_text": "about",
              "type": "word"
            },
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "so",
              "content": [
                {
                  "content": "so",
                  "type": "text"
                }
              ],
              "raw_text": "so",
              "type": "word"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "went",
              "content": [
                {
                  "content": "went",
                  "type": "text"
                }
              ],
              "raw_text": "went",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "trailingoff"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "did",
              "content": [
                {
                  "content": "did",
                  "type": "text"
                }
              ],
              "raw_text": "did",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "interruption"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "went",
              "content": [
                {
                  "content": "went",
                  "type": "text"
                }
              ],
              "raw_text": "went",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "store",
              "content": [
                {
                  "content": "store",
                  "type": "text"
                }
              ],
              "raw_text": "store",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "and",
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "type": "word"
            },
            {
              "cleaned_text": "then",
              "content": [
                {
                  "content": "then",
                  "type": "text"
                }
              ],
              "raw_text": "then",
              "type": "word"
            },
            {
              "duration": {
                "seconds": "2.3",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "came",
              "content": [
                {
                  "content": "came",
                  "type": "text"
                }
              ],
              "raw_text": "came",
              "type": "word"
            },
            {
              "cleaned_text": "back",
              "content": [
                {
                  "content": "back",
                  "type": "text"
                }
              ],
              "raw_text": "back",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "duration": {
                "seconds": "1:02.5",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "long",
              "content": [
                {
                  "content": "long",
                  "type": "text"
                }
              ],
              "raw_text": "long",
              "type": "word"
            },
            {
              "cleaned_text": "pause",
              "content": [
                {
                  "content": "pause",
                  "type": "text"
                }
              ],
              "raw_text": "pause",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [
    "CA"
  ],
  "participants": {
    "LSN": {
      "birth_date": null,
      "code": "LSN",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN"
      },
      "name": null,
      "role": "Adult"
    },
    "SPK": {
      "birth_date": null,
      "code": "SPK",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK"
      },
      "name": null,
      "role": "Speaker"
    }
  }
}
