crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ca-pauses.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "pauses",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 178,
                "start": 177
              },
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 184,
                "start": 183
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 194,
                "start": 193
              },
              "type": "word"
            },
            {
              "duration": {
                "type": "medium"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 201,
                "start": 200
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 211,
                "start": 210
              },
              "type": "word"
            },
            {
              "duration": {
                "type": "long"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 219,
                "start": 218
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 229,
                "start": 228
              },
              "type": "word"
            },
            {
              "duration": {
                "seconds": "3.",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 236,
                "start": 235
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 246,
                "start": 245
              },
              "type": "word"
            },
            {
              "duration": {
                "seconds": "2:3.",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 255,
                "start": 254
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 265,
                "start": 264
              },
              "type": "word"
            },
            {
              "duration": {
                "seconds": "2:3.4",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 275,
                "start": 274
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 285,
                "start": 284
              },
              "type": "word"
            },
            {
              "duration": {
                "seconds": "3.4",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 293,
                "start": 292
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "pauses followed by stuff",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 338,
                "start": 337
              },
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 346,
                "start": 345
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "pauses with annotations",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a",
                    "span": {
                      "end": 391,
                      "start": 390
                    },
                    "type": "word"
                  },
                  {
                    "duration": {
                      "seconds": "3.4",
                      "type": "timed"
                    },
                    "type": "pause"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "partialretracing"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 404,
                "start": 403
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
