crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ca-stuff.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Manon",
            "role": "Adult",
            "speaker_code": "MAN"
          },
          {
            "name": "Simon",
            "role": "Adult",
            "speaker_code": "SIM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "CLAPIcf",
        "language": "fra",
        "role": "Adult",
        "speaker": "MAN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "CLAPIcf",
        "language": "fra",
        "role": "Adult",
        "speaker": "SIM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "ca-stuff",
        "media_type": "audio",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 88638,
            "start_ms": 87226
          },
          "content": [
            {
              "content": [
                {
                  "content": {
                    "marker": "bottom_overlap_begin"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": "mais",
                  "type": "text"
                }
              ],
              "raw_text": "⌊mais",
              "span": {
                "end": 198,
                "start": 191
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "j",
                  "type": "text"
                },
                {
                  "content": "e",
                  "type": "shortening"
                }
              ],
              "raw_text": "j(e)",
              "span": {
                "end": 203,
                "start": 199
              },
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "veux",
                  "type": "text"
                }
              ],
              "raw_text": "veux",
              "span": {
                "end": 212,
                "start": 208
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "pas",
                  "type": "text"
                }
              ],
              "raw_text": "pas",
              "span": {
                "end": 216,
                "start": 213
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "étudier",
                  "type": "text"
                }
              ],
              "raw_text": "étudier",
              "span": {
                "end": 225,
                "start": 217
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "là",
                  "type": "text"
                }
              ],
              "raw_text": "là",
              "span": {
                "end": 229,
                "start": 226
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "dedans",
                  "type": "text"
                }
              ],
              "raw_text": "dedans",
              "span": {
                "end": 236,
                "start": 230
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "ca_no_break"
          }
        },
        "speaker": "SIM"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "MAN": {
      "birth_date": null,
      "code": "MAN",
      "id": {
        "corpus": "CLAPIcf",
        "language": "fra",
        "role": "Adult",
        "speaker": "MAN"
      },
      "name": "Manon",
      "role": "Adult"
    },
    "SIM": {
      "birth_date": null,
      "code": "SIM",
      "id": {
        "corpus": "CLAPIcf",
        "language": "fra",
        "role": "Adult",
        "speaker": "SIM"
      },
      "name": "Simon",
      "role": "Adult"
    }
  }
}
